added components for form and dashboard UI and basic setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet />
+<button class="add-user-button" (click)="openUserForm()">Add user</button>
+@deferred{
+<div class="user-dashboard">
+  <app-user-dashboard />
+ <canvas id="canvas"></canvas>
+  </canvas>
+</div>
+}
+@loading{
+  <div>Loading users...</div>
+}
+
+<app-user-form *ngIf="showUserForm" (onClose)="showUserForm = false" />
