--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -16,7 +16,14 @@
       <input [(ngModel)]="user.email" />
     </span>
 
-    <span>Role: <input [(ngModel)]="user.role" /></span>
+    <span>
+      Role:
+      <select name="role" id="role">
+        <option value="admin">Admin</option>
+        <option value="editor">Editor</option>
+        <option value="viewer">Viewer</option>
+      </select>
+    </span>
 
     <hr />
     <div class="close-button">
