--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   color: rgb(253, 253, 250);
   border: 1px solid rgb(195, 195, 224);
   margin-left: 1rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .user-dashboard {
@@ -13,11 +13,29 @@
   margin-left: 1rem;
   #canvas {
     margin-left: 20rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
   }
 }
 
 #canvas {
-  width: 30rem !important;
-  height: 30rem !important;
+  width: 25rem !important;
+  height: 25rem !important;
+}
+
+.nav-bar {
+  display: flex;
+  padding: 1rem;
+  font-size: large;
+  background-color: rgb(58, 177, 216);
+}
+
+.start-page {
+  text-align: center;
+  padding-top: 2rem;
+  background-color: rgb(208, 225, 234);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
 }
